<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.shinwan2.postmaker.auth.SignUpViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/topToolbar"
                style="@style/MyActionBarStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/signUpForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_3"
                    android:text="@string/signup_label_createaccount"
                    android:textColor="?my_textColorPrimary"
                    android:textSize="@dimen/text_title"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTil"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="?my_editTextTheme"
                    app:errorEnabled="true"
                    app:errorText="@{viewModel.isErrorEmailRequiredVisible() ? @string/signup_email_required_error : null}"
                    >

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordTil"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="?my_editTextTheme"
                    app:errorEnabled="true"
                    app:errorText="@{viewModel.isErrorPasswordRequiredVisible() ? @string/signin_password_required_error : null}"
                    >

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_password_hint"
                        android:imeActionLabel="@string/signup_imeaction_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/signUpButton"
                    style="?buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_3"
                    android:background="@drawable/btn_yellow"
                    app:isRecursiveEnabled="@{viewModel.isButtonEnabled()}"
                    >

                    <TextView
                        android:id="@+id/signUpButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signup_button_signin"
                        android:textAllCaps="true"
                        android:textColor="?my_textColorPrimary"
                        android:textStyle="bold"
                        app:isVisible="@{!(viewModel.isSigningUp() ?? false)}"
                        />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:theme="?my_progressBarTheme"
                        app:isVisible="@{viewModel.isSigningUp()}"
                        tools:visibility="visible"
                        />
                </FrameLayout>

                <TextView
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="?my_textColorSecondary"
                    android:textStyle="bold"
                    tools:text="Have an account? Sign in"
                    />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>