...
    <string name="signup_email_required_error">Email is required</string>
    <string name="signup_imeaction_short">Sign up</string>
    <string name="signup_label_createaccount">Create your account</string>
    <string name="signup_label_haveaccount_format">Have an account? %s</string>
    <string name="signup_message_success">You are signed in</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_password_required_error">Email is required</string>
    <string name="signup_title">Sign Up</string>

    <string name="signout_message_success">Successfully signed out</string>

    <string name="home_title">Timeline</string>
    <string name="home_drawer_menuitem_profile">Profile</string>
...
